// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should handle "icon" and "iconPosition" props 1`] = `
<button
  className="button-base button-primary button-medium button-medium-with-start-icon"
  data-testid="button"
>
  <SearchSVG
    className="icon icon-start"
    height={24}
    width={24}
  />
  Икать
</button>
`;

exports[`<Button /> should handle "icon" and "iconPosition" props 2`] = `
<button
  className="button-base button-primary button-medium button-medium-with-end-icon"
  data-testid="button"
>
  Икать
  <SearchSVG
    className="icon icon-end"
    height={24}
    width={24}
  />
</button>
`;

exports[`<Button /> should handle "icon" and "iconPosition" props 3`] = `
<button
  className="button-base button-primary button-medium button-medium-with-start-icon"
  data-testid="button"
>
  <SearchSVG
    className="icon icon-start"
    height={24}
    width={24}
  />
  Икать
</button>
`;

exports[`<Button /> should handle "size" prop 1`] = `
<button
  className="button-base button-primary button-small text-button-small"
  data-testid="button"
>
  Отмена
</button>
`;

exports[`<Button /> should handle "size" prop 2`] = `
<button
  className="button-base button-primary button-medium text-button-medium"
  data-testid="button"
>
  Отмена
</button>
`;

exports[`<Button /> should render icon button 1`] = `
<button
  className="button-base button-primary button-medium"
  data-testid="button"
>
  <PlusSVG
    className="icon"
    height={24}
    width={24}
  />
</button>
`;

exports[`<Button /> should render icon button 2`] = `
<button
  className="button-base button-primary button-medium"
  data-testid="button"
>
  <PlusSVG
    className="icon"
    height={24}
    width={24}
  />
</button>
`;

exports[`<Button /> should render secondary button 1`] = `
<button
  className="button-base button-secondary button-medium text-button-medium"
  data-testid="button"
>
  Отмена
</button>
`;

exports[`<Button /> should renders without props 1`] = `
<button
  className="button-base button-primary button-medium text-button-medium"
  data-testid="button"
>
  Кнопка
</button>
`;
